--- a/vueTodo/package.json
+++ b/vueTodo/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
